~ package refactor. + logging improvement.